Fixed test 14; added new tests from slack
