# swagger_server/service/student_service.py
@@ -25,6 +25,12 @@ def add_student(student):
     if res:
         return 'already exists', 409
 
+    if (not student.first_name):
+        return 'first name required', 405
+
+    if (not student.last_name):
+        return 'last name required', 405
+
     doc_id = student_db.insert(student.to_dict())
     student.student_id = doc_id
     return student.student_id
@@ -43,8 +49,19 @@ def get_student_by_id(student_id, subject):
         return None
     
     return student
-        
 
+def get_student_by_last_name(last_name):
+    # student = student_db.get(Student.last_name=last_name)
+    query = Query()
+    student = student_db.search(query.last_name == last_name)
+
+    if not student:
+        return None
+    
+    if len(student) > 0:
+        return None
+
+    return student[0]
 
 def delete_student(student_id):
     student = student_db.get(doc_id=int(student_id))
