# swagger_server/swagger/swagger.yaml
@@ -1,112 +1,140 @@
 ---
-swagger: "2.0"
-info:
-  description: "Swagger tutorial"
-  version: "1.0.0"
-  title: "Swagger tutorial"
-basePath: "/service-api"
-schemes:
-- "http"
-paths:
-  /student:
-    post:
-      summary: "Add a new student"
-      description: ""
-      operationId: "add_student"
-      consumes:
-      - "application/json"
-      - "application/xml"
-      produces:
-      - "application/xml"
-      - "application/json"
-      parameters:
-      - in: "body"
-        name: "body"
-        description: "Student object that needs to be added"
-        required: true
-        schema:
-          $ref: "#/definitions/Student"
-      responses:
-        "200":
-          description: "successful operation"
-          schema:
-            type: "integer"
-            format: "int64"
-        "405":
-          description: "Invalid input"
-        "409":
-          description: "already exists"
-      x-swagger-router-controller: "swagger_server.controllers.default_controller"
-  /student/{student_id}:
-    get:
-      summary: "Find student by ID"
-      description: "Returns a single student"
-      operationId: "get_student_by_id"
-      produces:
-      - "application/xml"
-      - "application/json"
-      parameters:
-      - name: "student_id"
-        in: "path"
-        description: "ID of student to return"
-        required: true
-        type: "integer"
-        format: "int64"
-      - name: "subject"
-        in: "query"
-        description: "The subject name"
-        required: false
-        type: "string"
-      responses:
-        "200":
-          description: "successful operation"
+  swagger: "2.0"
+  info:
+    description: "Swagger tutorial"
+    version: "1.0.0"
+    title: "Swagger tutorial"
+  basePath: "/service-api"
+  schemes:
+  - "http"
+  paths:
+    /student:
+      post:
+        summary: "Add a new student"
+        description: ""
+        operationId: "add_student"
+        consumes:
+        - "application/json"
+        - "application/xml"
+        produces:
+        - "application/xml"
+        - "application/json"
+        parameters:
+        - in: "body"
+          name: "body"
+          description: "Student object that needs to be added"
+          required: true
           schema:
             $ref: "#/definitions/Student"
-        "400":
-          description: "Invalid ID supplied"
-        "404":
-          description: "student not found"
-      x-swagger-router-controller: "swagger_server.controllers.default_controller"
-    delete:
-      description: ""
-      operationId: "delete_student"
-      produces:
-      - "application/xml"
-      - "application/json"
-      parameters:
-      - name: "student_id"
-        in: "path"
-        description: "ID of student to return"
-        required: true
-        type: "integer"
-        format: "int64"
-      responses:
-        "200":
-          description: "successful operation"
-          schema:
-            $ref: "#/definitions/Student"
-        "400":
-          description: "Invalid ID supplied"
-        "404":
-          description: "student not found"
-      x-swagger-router-controller: "swagger_server.controllers.default_controller"
-definitions:
-  Student:
-    type: "object"
-    properties:
-      student_id:
-        type: "integer"
-      first_name:
-        type: "string"
-      last_name:
-        type: "string"
-      grades:
-        type: "object"
-        additionalProperties:
+        responses:
+          "200":
+            description: "successful operation"
+            schema:
+              type: "integer"
+              format: "int64"
+          "405":
+            description: "Invalid input"
+          "409":
+            description: "already exists"
+        x-swagger-router-controller: "swagger_server.controllers.default_controller"
+      get:
+        summary: "Retrieve student by last name"
+        description: "Retrieve student by last name"
+        operationId: "get_student_by_last_name"
+        consumes:
+        - "application/json"
+        - "application/xml"
+        produces:
+        - "application/xml"
+        - "application/json"
+        parameters:
+        - in: "query"
+          name: "last_name"
+          description: "last name to be searched for"
+          required: true
+          type: "string"
+        responses:
+          "200":
+            description: "successful operation"
+            schema:
+              $ref: "#/definitions/Student"
+          "404":
+            description: "doesn't exist"
+          "405":
+            description: "Invalid input"
+        x-swagger-router-controller: "swagger_server.controllers.default_controller"
+        
+    /student/{student_id}:
+      get:
+        summary: "Find student by ID"
+        description: "Returns a single student"
+        operationId: "get_student_by_id"
+        produces:
+        - "application/xml"
+        - "application/json"
+        parameters:
+        - name: "student_id"
+          in: "path"
+          description: "ID of student to return"
+          required: true
           type: "integer"
-    example:
-      student_id: 0
-      last_name: "last_name"
-      grades:
-        key: 6
-      first_name: "first_name"
+          format: "int64"
+        - name: "subject"
+          in: "query"
+          description: "The subject name"
+          required: false
+          type: "string"
+        responses:
+          "200":
+            description: "successful operation"
+            schema:
+              $ref: "#/definitions/Student"
+          "400":
+            description: "Invalid ID supplied"
+          "404":
+            description: "student not found"
+        x-swagger-router-controller: "swagger_server.controllers.default_controller"
+      delete:
+        description: ""
+        operationId: "delete_student"
+        produces:
+        - "application/xml"
+        - "application/json"
+        parameters:
+        - name: "student_id"
+          in: "path"
+          description: "ID of student to return"
+          required: true
+          type: "integer"
+          format: "int64"
+        responses:
+          "200":
+            description: "successful operation"
+            schema:
+              $ref: "#/definitions/Student"
+          "400":
+            description: "Invalid ID supplied"
+          "404":
+            description: "student not found"
+        x-swagger-router-controller: "swagger_server.controllers.default_controller"
+  definitions:
+    Student:
+      type: "object"
+      properties:
+        student_id:
+          type: "integer"
+        first_name:
+          type: "string"
+        last_name:
+          type: "string"
+        grades:
+          type: "object"
+          additionalProperties:
+            type: "integer"
+      example:
+        student_id: 0
+        last_name: "last_name"
+        grades:
+          key: 6
+        first_name: "first_name"
+  
